--- a/package.json
+++ b/package.json
@@ -1,44 +1,21 @@
 {
-  "name": "fivem-rp-template",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "paid-scrims-backend",
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "npm run build && npx gh-pages -d dist",
-    "typecheck": "tsc --noEmit",
-    "check": "npm run typecheck || npm run lint || true",
-    "check:all": "echo \"🔍 Running TypeScript check...\" && (tsc --noEmit || true) && echo \"📝 Running ESLint...\" && (eslint . || true)"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.2",
-    "autoprefixer": "^10.4.21",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
-    "gsap": "^3.13.0",
-    "lucide-react": "^0.540.0",
-    "postcss": "^8.5.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.4.17"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6",
+    "razorpay": "^2.9.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "nodemon": "^3.0.1"
   }
 }
